{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 26,
  "lineage": "0b2acef3-a01e-987b-7dc1-eb6b0a08b867",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c47bb697187f7c4e",
            "domain": "vpc",
            "id": "eipalloc-0c47bb697187f7c4e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-37-70.compute-1.amazonaws.com",
            "public_ip": "18.235.37.70",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099d3f9303d0c7527",
            "domain": "vpc",
            "id": "eipalloc-099d3f9303d0c7527",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-54-184-135.compute-1.amazonaws.com",
            "public_ip": "52.54.184.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_internetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605561256632:internet-gateway/igw-0d90aff2da042024b",
            "id": "igw-0d90aff2da042024b",
            "owner_id": "605561256632",
            "tags": {
              "Name": "main_internetgateway"
            },
            "tags_all": {
              "Name": "main_internetgateway"
            },
            "vpc_id": "vpc-0bbc32a7855fcaac3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c47bb697187f7c4e",
            "connectivity_type": "public",
            "id": "nat-073812e3fb1909b6d",
            "network_interface_id": "eni-00115bce90880f98a",
            "private_ip": "10.0.14.200",
            "public_ip": "18.235.37.70",
            "subnet_id": "subnet-03366617ee82a8fe6",
            "tags": {
              "Name": "aws_nat_gateway_1"
            },
            "tags_all": {
              "Name": "aws_nat_gateway_1"
            }
          },
          "dependencies": [
            "aws_eip.aws_eip_1",
            "aws_internet_gateway.main_internetgateway",
            "aws_subnet.public_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099d3f9303d0c7527",
            "connectivity_type": "public",
            "id": "nat-059e5d9bdc9f90fd5",
            "network_interface_id": "eni-0083afdeb5ab74c75",
            "private_ip": "10.0.66.57",
            "public_ip": "52.54.184.135",
            "subnet_id": "subnet-05027cb8c5ab2918f",
            "tags": {
              "Name": "aws_nat_gateway_2"
            },
            "tags_all": {
              "Name": "aws_nat_gateway_2"
            }
          },
          "dependencies": [
            "aws_eip.aws_eip_2",
            "aws_internet_gateway.main_internetgateway",
            "aws_subnet.public_subnet_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605561256632:route-table/rtb-08c80c8751a3342d1",
            "id": "rtb-08c80c8751a3342d1",
            "owner_id": "605561256632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073812e3fb1909b6d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbc32a7855fcaac3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.aws_eip_1",
            "aws_internet_gateway.main_internetgateway",
            "aws_nat_gateway.aws_nat_gateway_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605561256632:route-table/rtb-0a8c222e51654c865",
            "id": "rtb-0a8c222e51654c865",
            "owner_id": "605561256632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-059e5d9bdc9f90fd5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbc32a7855fcaac3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.aws_eip_2",
            "aws_internet_gateway.main_internetgateway",
            "aws_nat_gateway.aws_nat_gateway_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605561256632:route-table/rtb-0f4541389833c8b24",
            "id": "rtb-0f4541389833c8b24",
            "owner_id": "605561256632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d90aff2da042024b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbc32a7855fcaac3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_internetgateway",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_to_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5b0e2a6ebde2eaf",
            "route_table_id": "rtb-08c80c8751a3342d1",
            "subnet_id": "subnet-059e0b2ef17ad3683"
          },
          "dependencies": [
            "aws_eip.aws_eip_1",
            "aws_internet_gateway.main_internetgateway",
            "aws_nat_gateway.aws_nat_gateway_1",
            "aws_route_table.private_route_table_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_to_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d2ede2bf7e7f2f4",
            "route_table_id": "rtb-0a8c222e51654c865",
            "subnet_id": "subnet-09eff3aabca645f00"
          },
          "dependencies": [
            "aws_eip.aws_eip_2",
            "aws_internet_gateway.main_internetgateway",
            "aws_nat_gateway.aws_nat_gateway_2",
            "aws_route_table.private_route_table_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_to_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099b6ef76d7c706fe",
            "route_table_id": "rtb-0f4541389833c8b24",
            "subnet_id": "subnet-03366617ee82a8fe6"
          },
          "dependencies": [
            "aws_internet_gateway.main_internetgateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_to_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0394a67f5e1580ee2",
            "route_table_id": "rtb-0f4541389833c8b24",
            "subnet_id": "subnet-05027cb8c5ab2918f"
          },
          "dependencies": [
            "aws_internet_gateway.main_internetgateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605561256632:subnet/subnet-059e0b2ef17ad3683",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059e0b2ef17ad3683",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605561256632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0bbc32a7855fcaac3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605561256632:subnet/subnet-09eff3aabca645f00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09eff3aabca645f00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605561256632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-0bbc32a7855fcaac3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605561256632:subnet/subnet-03366617ee82a8fe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03366617ee82a8fe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605561256632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0bbc32a7855fcaac3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605561256632:subnet/subnet-05027cb8c5ab2918f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05027cb8c5ab2918f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605561256632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-0bbc32a7855fcaac3"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605561256632:vpc/vpc-0bbc32a7855fcaac3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db07c43188d6085a",
            "default_route_table_id": "rtb-02fdc69a64c202588",
            "default_security_group_id": "sg-0487146dad919e32f",
            "dhcp_options_id": "dopt-03f708cf017011a8a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbc32a7855fcaac3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02fdc69a64c202588",
            "owner_id": "605561256632",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}